--- a/src/CSS/Index.css
+++ b/src/CSS/Index.css
@@ -17,7 +17,7 @@
 
 /* General */
 .underline {
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 
 .title {
@@ -25,7 +25,7 @@
 }
 
 .bold {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 .no-link-style {
