--- a/src/CSS/Index.scss
+++ b/src/CSS/Index.scss
@@ -126,11 +126,10 @@
       @include gridTemplate(2);
     }
   }
+}
 
-  #Slide4-6 {
+#Slide5 {
+  #Slide5-metoo {
     @include gridTemplate(2);
-    img {
-      width: 200px;
-    }
   }
 }
